group("All") {
  deps = [
    "//src/client:clang",
    "//src/daemon:clangd",
  ]
}

group("Tests") {
  deps = [
    "//src/test:unit_tests",
  ]
}

if (os == "linux") {
  action("deb_package") {
    script = "//build/deb_package.py"
    sources = [
      "//build/common_package.include",
      "//build/deb_changelog.template",
      "//build/deb_control.template",
      "//build/expand_env_vars.sh",
      "//install/clangd.conf",
      "//install/debian_prerm",
      "//install/sysvinit_service",
      "//src/daemon/configuration_pb2.py",
      "//src/proto/base_pb2.py",
      "$root_out_dir/clang",
      "$root_out_dir/clangd",
      "$root_out_dir/libbase.so",
      "$root_out_dir/libc++.so",
      "$root_out_dir/libc++abi.so",
      "$root_out_dir/libcommand.so",
      "$root_out_dir/libconfiguration.so",
      "$root_out_dir/libconst_string.so",
      "$root_out_dir/libconstants.so",
      "$root_out_dir/libcounter.so",
      "$root_out_dir/libfile_cache.so",
      "$root_out_dir/liblogging.so",
      "$root_out_dir/libmanifest.so",
      "$root_out_dir/libnet.so",
      "$root_out_dir/libproto.so",
      "$root_out_dir/libprotobuf.so",
      "$root_out_dir/libsnappy.so",
      "$root_out_dir/libtcmalloc.so",
    ]
    outputs = [
      "$root_out_dir/deb/debian/control",
      "$root_out_dir/deb/debian/changelog",
      "$root_out_dir/deb/debian/files",
      "$root_out_dir/deb/debian/tmp/etc/clangd.conf",
      "$root_out_dir/deb/debian/tmp/etc/init.d/clangd",
      "$root_out_dir/deb/debian/tmp/usr/bin/dist-clang/clang",
      "$root_out_dir/deb/debian/tmp/usr/bin/dist-clang/clang++",
      "$root_out_dir/deb/debian/tmp/usr/bin/dist-clang/clangd",
      "$root_out_dir/deb/debian/tmp/usr/lib/dist-clang/libbase.so",
      "$root_out_dir/deb/debian/tmp/usr/lib/dist-clang/libc++.so",
      "$root_out_dir/deb/debian/tmp/usr/lib/dist-clang/libc++abi.so",
      "$root_out_dir/deb/debian/tmp/usr/lib/dist-clang/libcommand.so",
      "$root_out_dir/deb/debian/tmp/usr/lib/dist-clang/libconfiguration.so",
      "$root_out_dir/deb/debian/tmp/usr/lib/dist-clang/libconst_string.so",
      "$root_out_dir/deb/debian/tmp/usr/lib/dist-clang/libconstants.so",
      "$root_out_dir/deb/debian/tmp/usr/lib/dist-clang/libcounter.so",
      "$root_out_dir/deb/debian/tmp/usr/lib/dist-clang/libfile_cache.so",
      "$root_out_dir/deb/debian/tmp/usr/lib/dist-clang/liblogging.so",
      "$root_out_dir/deb/debian/tmp/usr/lib/dist-clang/libmanifest.so",
      "$root_out_dir/deb/debian/tmp/usr/lib/dist-clang/libnet.so",
      "$root_out_dir/deb/debian/tmp/usr/lib/dist-clang/libproto.so",
      "$root_out_dir/deb/debian/tmp/usr/lib/dist-clang/libprotobuf.so",
      "$root_out_dir/deb/debian/tmp/usr/lib/dist-clang/libsnappy.so",
      "$root_out_dir/deb/debian/tmp/usr/lib/dist-clang/libtcmalloc.so",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/__init__.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/daemon/__init__.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/daemon/configuration_pb2.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/proto/__init__.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/proto/base_pb2.py",
      "$root_out_dir/deb/debian/tmp/DEBIAN/control",
      "$root_out_dir/deb/debian/tmp/DEBIAN/prerm",
      "$root_out_dir/dist-clang_${version}_amd64.deb",
      "$root_out_dir/dist-clang_${version}_amd64.changes",
    ]
    args = [
      rebase_path("$root_out_dir"),
      "$version",
    ]
  }

  action("rpm_package") {
    script = "//build/rpm_package.py"
    sources = [
      "//build/common_package.include",
      "//build/rpm_spec.template",
      "//build/expand_env_vars.sh",
      "//install/clangd.conf",
      "//install/systemd_service",
      "//src/daemon/configuration_pb2.py",
      "//src/proto/base_pb2.py",
      "$root_out_dir/clang",
      "$root_out_dir/clangd",
      "$root_out_dir/libbase.so",
      "$root_out_dir/libc++.so",
      "$root_out_dir/libc++abi.so",
      "$root_out_dir/libcommand.so",
      "$root_out_dir/libconfiguration.so",
      "$root_out_dir/libconst_string.so",
      "$root_out_dir/libconstants.so",
      "$root_out_dir/libcounter.so",
      "$root_out_dir/libfile_cache.so",
      "$root_out_dir/liblogging.so",
      "$root_out_dir/libmanifest.so",
      "$root_out_dir/libnet.so",
      "$root_out_dir/libproto.so",
      "$root_out_dir/libprotobuf.so",
      "$root_out_dir/libsnappy.so",
      "$root_out_dir/libtcmalloc.so",
    ]
    outputs = [
      "$root_out_dir/rpm.spec",
      "$root_out_dir/rpm/etc/clangd.conf",
      "$root_out_dir/rpm/usr/bin/dist-clang/clang",
      "$root_out_dir/rpm/usr/bin/dist-clang/clang++",
      "$root_out_dir/rpm/usr/bin/dist-clang/clangd",
      "$root_out_dir/rpm/usr/lib/dist-clang/libbase.so",
      "$root_out_dir/rpm/usr/lib/dist-clang/libc++.so",
      "$root_out_dir/rpm/usr/lib/dist-clang/libc++abi.so",
      "$root_out_dir/rpm/usr/lib/dist-clang/libcommand.so",
      "$root_out_dir/rpm/usr/lib/dist-clang/libconfiguration.so",
      "$root_out_dir/rpm/usr/lib/dist-clang/libconst_string.so",
      "$root_out_dir/rpm/usr/lib/dist-clang/libconstants.so",
      "$root_out_dir/rpm/usr/lib/dist-clang/libcounter.so",
      "$root_out_dir/rpm/usr/lib/dist-clang/libfile_cache.so",
      "$root_out_dir/rpm/usr/lib/dist-clang/liblogging.so",
      "$root_out_dir/rpm/usr/lib/dist-clang/libmanifest.so",
      "$root_out_dir/rpm/usr/lib/dist-clang/libnet.so",
      "$root_out_dir/rpm/usr/lib/dist-clang/libproto.so",
      "$root_out_dir/rpm/usr/lib/dist-clang/libprotobuf.so",
      "$root_out_dir/rpm/usr/lib/dist-clang/libsnappy.so",
      "$root_out_dir/rpm/usr/lib/dist-clang/libtcmalloc.so",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/__init__.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/daemon/__init__.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/daemon/configuration_pb2.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/proto/__init__.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/proto/base_pb2.py",
      "$root_out_dir/rpm/usr/lib/systemd/system/clangd.service",
      "$root_out_dir/rpmbuild/RPMS/x86_64/dist-clang-${version}-1.x86_64.rpm",
    ]
    args = [
      rebase_path("$root_out_dir"),
      "$version",
    ]
  }
}
