group("All") {
  deps = [
    "//src/client:clang",
    "//src/daemon:clangd",
  ]
}

if (config_for_tests) {
  group("Tests") {
    deps = [
      "//src/test:unit_tests",
    ]
  }
}

if (os == "linux") {
  action("deb_package") {
    script = "//build/deb_package.py"
    sources = [
      "//build/common_package.include",
      "//build/deb_changelog.template",
      "//build/deb_control.template",
      "//build/expand_env_vars.sh",
      "//install/clangd.conf",
      "//install/debian_prerm",
      "//install/supervisord_service",
      "//src/daemon/configuration_pb2.py",
      "//src/proto/base_pb2.py",
      "$root_out_dir/clang",
      "$root_out_dir/clangd",
      "$root_out_dir/libbase.so",
      "$root_out_dir/libc++.so",
      "$root_out_dir/libc++abi.so",
      "$root_out_dir/libcommand.so",
      "$root_out_dir/libconfiguration.so",
      "$root_out_dir/libconst_string.so",
      "$root_out_dir/libconstants.so",
      "$root_out_dir/libcounter.so",
      "$root_out_dir/libfile_cache.so",
      "$root_out_dir/liblogging.so",
      "$root_out_dir/libmanifest.so",
      "$root_out_dir/libnet.so",
      "$root_out_dir/libproto.so",
      "$root_out_dir/libprotobuf.so",
      "$root_out_dir/libsnappy.so",
      "$root_out_dir/libtcmalloc.so",
      # FIXME: source python protobuf files.
    ]
    outputs = [
      "$root_out_dir/deb/debian/control",
      "$root_out_dir/deb/debian/changelog",
      "$root_out_dir/deb/debian/files",
      "$root_out_dir/deb/debian/tmp/etc/clangd.conf",
      "$root_out_dir/deb/debian/tmp/etc/init.d/clangd",
      "$root_out_dir/deb/debian/tmp/etc/supervisor/conf.d/clangd.conf",
      "$root_out_dir/deb/debian/tmp/usr/bin/dist-clang/clang",
      "$root_out_dir/deb/debian/tmp/usr/bin/dist-clang/clang++",
      "$root_out_dir/deb/debian/tmp/usr/bin/dist-clang/clangd",
      "$root_out_dir/deb/debian/tmp/usr/lib/dist-clang/libbase.so",
      "$root_out_dir/deb/debian/tmp/usr/lib/dist-clang/libc++.so",
      "$root_out_dir/deb/debian/tmp/usr/lib/dist-clang/libc++abi.so",
      "$root_out_dir/deb/debian/tmp/usr/lib/dist-clang/libcommand.so",
      "$root_out_dir/deb/debian/tmp/usr/lib/dist-clang/libconfiguration.so",
      "$root_out_dir/deb/debian/tmp/usr/lib/dist-clang/libconst_string.so",
      "$root_out_dir/deb/debian/tmp/usr/lib/dist-clang/libconstants.so",
      "$root_out_dir/deb/debian/tmp/usr/lib/dist-clang/libcounter.so",
      "$root_out_dir/deb/debian/tmp/usr/lib/dist-clang/libfile_cache.so",
      "$root_out_dir/deb/debian/tmp/usr/lib/dist-clang/liblogging.so",
      "$root_out_dir/deb/debian/tmp/usr/lib/dist-clang/libmanifest.so",
      "$root_out_dir/deb/debian/tmp/usr/lib/dist-clang/libnet.so",
      "$root_out_dir/deb/debian/tmp/usr/lib/dist-clang/libproto.so",
      "$root_out_dir/deb/debian/tmp/usr/lib/dist-clang/libprotobuf.so",
      "$root_out_dir/deb/debian/tmp/usr/lib/dist-clang/libsnappy.so",
      "$root_out_dir/deb/debian/tmp/usr/lib/dist-clang/libtcmalloc.so",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/__init__.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/daemon/__init__.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/daemon/configuration_pb2.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/proto/__init__.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/proto/base_pb2.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/google/protobuf/compiler/__init__.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/google/protobuf/compiler/plugin_pb2.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/google/protobuf/descriptor_database.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/google/protobuf/descriptor_pb2.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/google/protobuf/descriptor_pool.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/google/protobuf/descriptor.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/google/protobuf/__init__.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/google/protobuf/internal/api_implementation.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/google/protobuf/internal/containers.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/google/protobuf/internal/cpp_message.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/google/protobuf/internal/decoder.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/google/protobuf/internal/encoder.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/google/protobuf/internal/enum_type_wrapper.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/google/protobuf/internal/__init__.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/google/protobuf/internal/message_listener.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/google/protobuf/internal/python_message.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/google/protobuf/internal/type_checkers.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/google/protobuf/internal/wire_format.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/google/protobuf/message_factory.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/google/protobuf/message.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/google/protobuf/pyext/cpp_message.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/google/protobuf/pyext/__init__.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/google/protobuf/reflection.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/google/protobuf/service.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/google/protobuf/service_reflection.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/google/protobuf/symbol_database.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/google/protobuf/text_encoding.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/google/protobuf/text_format.py",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/protobuf-2.6.2_pre-py2.7.egg-info/dependency_links.txt",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/protobuf-2.6.2_pre-py2.7.egg-info/namespace_packages.txt",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/protobuf-2.6.2_pre-py2.7.egg-info/PKG-INFO",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/protobuf-2.6.2_pre-py2.7.egg-info/requires.txt",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/protobuf-2.6.2_pre-py2.7.egg-info/SOURCES.txt",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/protobuf-2.6.2_pre-py2.7.egg-info/top_level.txt",
      "$root_out_dir/deb/debian/tmp/usr/lib/python2.7/dist_clang/protobuf-2.6.2_pre-py2.7-nspkg.pth",
      "$root_out_dir/deb/debian/tmp/DEBIAN/control",
      "$root_out_dir/deb/debian/tmp/DEBIAN/prerm",
      "$root_out_dir/dist-clang_${version}_amd64.deb",
      "$root_out_dir/dist-clang_${version}_amd64.changes",
    ]
    args = [
      rebase_path("$root_out_dir"),
      "$version",
    ]

    data_deps = [ "//src/third_party/protobuf:protoc" ]
  }

  action("rpm_package") {
    script = "//build/rpm_package.py"
    sources = [
      "//build/common_package.include",
      "//build/rpm_spec.template",
      "//build/expand_env_vars.sh",
      "//install/clangd.conf",
      "//install/systemd_service",
      "//src/daemon/configuration_pb2.py",
      "//src/proto/base_pb2.py",
      "$root_out_dir/clang",
      "$root_out_dir/clangd",
      "$root_out_dir/libbase.so",
      "$root_out_dir/libc++.so",
      "$root_out_dir/libc++abi.so",
      "$root_out_dir/libcommand.so",
      "$root_out_dir/libconfiguration.so",
      "$root_out_dir/libconst_string.so",
      "$root_out_dir/libconstants.so",
      "$root_out_dir/libcounter.so",
      "$root_out_dir/libfile_cache.so",
      "$root_out_dir/liblogging.so",
      "$root_out_dir/libmanifest.so",
      "$root_out_dir/libnet.so",
      "$root_out_dir/libproto.so",
      "$root_out_dir/libprotobuf.so",
      "$root_out_dir/libsnappy.so",
      "$root_out_dir/libtcmalloc.so",
      # FIXME: source python protobuf files.
    ]
    outputs = [
      "$root_out_dir/rpm.spec",
      "$root_out_dir/rpm/etc/clangd.conf",
      "$root_out_dir/rpm/usr/bin/dist-clang/clang",
      "$root_out_dir/rpm/usr/bin/dist-clang/clang++",
      "$root_out_dir/rpm/usr/bin/dist-clang/clangd",
      "$root_out_dir/rpm/usr/lib/dist-clang/libbase.so",
      "$root_out_dir/rpm/usr/lib/dist-clang/libc++.so",
      "$root_out_dir/rpm/usr/lib/dist-clang/libc++abi.so",
      "$root_out_dir/rpm/usr/lib/dist-clang/libcommand.so",
      "$root_out_dir/rpm/usr/lib/dist-clang/libconfiguration.so",
      "$root_out_dir/rpm/usr/lib/dist-clang/libconst_string.so",
      "$root_out_dir/rpm/usr/lib/dist-clang/libconstants.so",
      "$root_out_dir/rpm/usr/lib/dist-clang/libcounter.so",
      "$root_out_dir/rpm/usr/lib/dist-clang/libfile_cache.so",
      "$root_out_dir/rpm/usr/lib/dist-clang/liblogging.so",
      "$root_out_dir/rpm/usr/lib/dist-clang/libmanifest.so",
      "$root_out_dir/rpm/usr/lib/dist-clang/libnet.so",
      "$root_out_dir/rpm/usr/lib/dist-clang/libproto.so",
      "$root_out_dir/rpm/usr/lib/dist-clang/libprotobuf.so",
      "$root_out_dir/rpm/usr/lib/dist-clang/libsnappy.so",
      "$root_out_dir/rpm/usr/lib/dist-clang/libtcmalloc.so",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/__init__.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/daemon/__init__.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/daemon/configuration_pb2.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/proto/__init__.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/proto/base_pb2.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/google/protobuf/compiler/__init__.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/google/protobuf/compiler/plugin_pb2.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/google/protobuf/descriptor_database.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/google/protobuf/descriptor_pb2.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/google/protobuf/descriptor_pool.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/google/protobuf/descriptor.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/google/protobuf/__init__.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/google/protobuf/internal/api_implementation.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/google/protobuf/internal/containers.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/google/protobuf/internal/cpp_message.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/google/protobuf/internal/decoder.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/google/protobuf/internal/encoder.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/google/protobuf/internal/enum_type_wrapper.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/google/protobuf/internal/__init__.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/google/protobuf/internal/message_listener.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/google/protobuf/internal/python_message.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/google/protobuf/internal/type_checkers.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/google/protobuf/internal/wire_format.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/google/protobuf/message_factory.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/google/protobuf/message.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/google/protobuf/pyext/cpp_message.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/google/protobuf/pyext/__init__.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/google/protobuf/reflection.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/google/protobuf/service.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/google/protobuf/service_reflection.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/google/protobuf/symbol_database.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/google/protobuf/text_encoding.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/google/protobuf/text_format.py",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/protobuf-2.6.2_pre-py2.7.egg-info/dependency_links.txt",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/protobuf-2.6.2_pre-py2.7.egg-info/namespace_packages.txt",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/protobuf-2.6.2_pre-py2.7.egg-info/PKG-INFO",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/protobuf-2.6.2_pre-py2.7.egg-info/requires.txt",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/protobuf-2.6.2_pre-py2.7.egg-info/SOURCES.txt",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/protobuf-2.6.2_pre-py2.7.egg-info/top_level.txt",
      "$root_out_dir/rpm/usr/lib/python2.7/dist_clang/protobuf-2.6.2_pre-py2.7-nspkg.pth",
      "$root_out_dir/rpm/usr/lib/systemd/system/clangd.service",
      "$root_out_dir/rpmbuild/RPMS/x86_64/dist-clang-${version}-1.x86_64.rpm",
    ]
    args = [
      rebase_path("$root_out_dir"),
      "$version",
    ]

    data_deps = [ "//src/third_party/protobuf:protoc" ]
  }
}

if (os == "mac") {
  action("pkg_package") {
    script = "//build/pkg_package.py"
    sources = [
      "//build/common_package.include",
      "//build/luggage_makefile.template",
      "//install/clangd.conf",
      "//install/launchd_service",
      "//install/pkg_postinstall",
      "//src/daemon/configuration_pb2.py",
      "//src/proto/base_pb2.py",
      "$root_out_dir/clang",
      "$root_out_dir/clangd",
      "$root_out_dir/libbase.dylib",
      "$root_out_dir/libc++.dylib",
      "$root_out_dir/libc++abi.dylib",
      "$root_out_dir/libcommand.dylib",
      "$root_out_dir/libconfiguration.dylib",
      "$root_out_dir/libconst_string.dylib",
      "$root_out_dir/libconstants.dylib",
      "$root_out_dir/libcounter.dylib",
      "$root_out_dir/libfile_cache.dylib",
      "$root_out_dir/liblogging.dylib",
      "$root_out_dir/libmanifest.dylib",
      "$root_out_dir/libnet.dylib",
      "$root_out_dir/libproto.dylib",
      "$root_out_dir/libprotobuf.dylib",
      "$root_out_dir/libsnappy.dylib",
      # FIXME: source python protobuf files.
    ]
    outputs = [
      "$root_out_dir/Makefile",
      "$root_out_dir/postinstall",
      "$root_out_dir/pkg/etc/clangd.conf",
      "$root_out_dir/pkg/usr/bin/dist-clang/clang",
      "$root_out_dir/pkg/usr/bin/dist-clang/clang++",
      "$root_out_dir/pkg/usr/bin/dist-clang/clangd",
      "$root_out_dir/pkg/usr/lib/dist-clang/libbase.dylib",
      "$root_out_dir/pkg/usr/lib/dist-clang/libc++.dylib",
      "$root_out_dir/pkg/usr/lib/dist-clang/libc++abi.dylib",
      "$root_out_dir/pkg/usr/lib/dist-clang/libcommand.dylib",
      "$root_out_dir/pkg/usr/lib/dist-clang/libconfiguration.dylib",
      "$root_out_dir/pkg/usr/lib/dist-clang/libconst_string.dylib",
      "$root_out_dir/pkg/usr/lib/dist-clang/libconstants.dylib",
      "$root_out_dir/pkg/usr/lib/dist-clang/libcounter.dylib",
      "$root_out_dir/pkg/usr/lib/dist-clang/libfile_cache.dylib",
      "$root_out_dir/pkg/usr/lib/dist-clang/liblogging.dylib",
      "$root_out_dir/pkg/usr/lib/dist-clang/libmanifest.dylib",
      "$root_out_dir/pkg/usr/lib/dist-clang/libnet.dylib",
      "$root_out_dir/pkg/usr/lib/dist-clang/libproto.dylib",
      "$root_out_dir/pkg/usr/lib/dist-clang/libprotobuf.dylib",
      "$root_out_dir/pkg/usr/lib/dist-clang/libsnappy.dylib",
      "$root_out_dir/pkg/usr/lib/python2.7/dist_clang/__init__.py",
      "$root_out_dir/pkg/usr/lib/python2.7/dist_clang/daemon/__init__.py",
      "$root_out_dir/pkg/usr/lib/python2.7/dist_clang/daemon/configuration_pb2.py",
      "$root_out_dir/pkg/usr/lib/python2.7/dist_clang/proto/__init__.py",
      "$root_out_dir/pkg/usr/lib/python2.7/dist_clang/proto/base_pb2.py",
      "$root_out_dir/pkg/usr/lib/python2.7/dist_clang/google/protobuf/compiler/__init__.py",
      "$root_out_dir/pkg/usr/lib/python2.7/dist_clang/google/protobuf/compiler/plugin_pb2.py",
      "$root_out_dir/pkg/usr/lib/python2.7/dist_clang/google/protobuf/descriptor_database.py",
      "$root_out_dir/pkg/usr/lib/python2.7/dist_clang/google/protobuf/descriptor_pb2.py",
      "$root_out_dir/pkg/usr/lib/python2.7/dist_clang/google/protobuf/descriptor_pool.py",
      "$root_out_dir/pkg/usr/lib/python2.7/dist_clang/google/protobuf/descriptor.py",
      "$root_out_dir/pkg/usr/lib/python2.7/dist_clang/google/protobuf/__init__.py",
      "$root_out_dir/pkg/usr/lib/python2.7/dist_clang/google/protobuf/internal/api_implementation.py",
      "$root_out_dir/pkg/usr/lib/python2.7/dist_clang/google/protobuf/internal/containers.py",
      "$root_out_dir/pkg/usr/lib/python2.7/dist_clang/google/protobuf/internal/cpp_message.py",
      "$root_out_dir/pkg/usr/lib/python2.7/dist_clang/google/protobuf/internal/decoder.py",
      "$root_out_dir/pkg/usr/lib/python2.7/dist_clang/google/protobuf/internal/encoder.py",
      "$root_out_dir/pkg/usr/lib/python2.7/dist_clang/google/protobuf/internal/enum_type_wrapper.py",
      "$root_out_dir/pkg/usr/lib/python2.7/dist_clang/google/protobuf/internal/__init__.py",
      "$root_out_dir/pkg/usr/lib/python2.7/dist_clang/google/protobuf/internal/message_listener.py",
      "$root_out_dir/pkg/usr/lib/python2.7/dist_clang/google/protobuf/internal/python_message.py",
      "$root_out_dir/pkg/usr/lib/python2.7/dist_clang/google/protobuf/internal/type_checkers.py",
      "$root_out_dir/pkg/usr/lib/python2.7/dist_clang/google/protobuf/internal/wire_format.py",
      "$root_out_dir/pkg/usr/lib/python2.7/dist_clang/google/protobuf/message_factory.py",
      "$root_out_dir/pkg/usr/lib/python2.7/dist_clang/google/protobuf/message.py",
      "$root_out_dir/pkg/usr/lib/python2.7/dist_clang/google/protobuf/pyext/cpp_message.py",
      "$root_out_dir/pkg/usr/lib/python2.7/dist_clang/google/protobuf/pyext/__init__.py",
      "$root_out_dir/pkg/usr/lib/python2.7/dist_clang/google/protobuf/reflection.py",
      "$root_out_dir/pkg/usr/lib/python2.7/dist_clang/google/protobuf/service.py",
      "$root_out_dir/pkg/usr/lib/python2.7/dist_clang/google/protobuf/service_reflection.py",
      "$root_out_dir/pkg/usr/lib/python2.7/dist_clang/google/protobuf/symbol_database.py",
      "$root_out_dir/pkg/usr/lib/python2.7/dist_clang/google/protobuf/text_encoding.py",
      "$root_out_dir/pkg/usr/lib/python2.7/dist_clang/google/protobuf/text_format.py",
      "$root_out_dir/pkg/usr/lib/python2.7/dist_clang/protobuf-2.6.2_pre-py2.7.egg-info/dependency_links.txt",
      "$root_out_dir/pkg/usr/lib/python2.7/dist_clang/protobuf-2.6.2_pre-py2.7.egg-info/namespace_packages.txt",
      "$root_out_dir/pkg/usr/lib/python2.7/dist_clang/protobuf-2.6.2_pre-py2.7.egg-info/PKG-INFO",
      "$root_out_dir/pkg/usr/lib/python2.7/dist_clang/protobuf-2.6.2_pre-py2.7.egg-info/requires.txt",
      "$root_out_dir/pkg/usr/lib/python2.7/dist_clang/protobuf-2.6.2_pre-py2.7.egg-info/SOURCES.txt",
      "$root_out_dir/pkg/usr/lib/python2.7/dist_clang/protobuf-2.6.2_pre-py2.7.egg-info/top_level.txt",
      "$root_out_dir/pkg/usr/lib/python2.7/dist_clang/protobuf-2.6.2_pre-py2.7-nspkg.pth",
      "$root_out_dir/pkg/Library/LaunchDaemons/ru.yandex.clangd.plist",
    ]
    args = [
      rebase_path("$root_out_dir"),
      "$version",
    ]

    data_deps = [ "//src/third_party/protobuf:protoc" ]
  }
}
